# zirconium-mc

./: .gitignore  Cargo.toml  README.md  note.txt
crates/zr_binary/: Cargo.toml
crates/zr_binary/macros/: Cargo.toml
crates/zr_binary/macros/src/: lib.rs
crates/zr_binary/macros/src/provider/: field.rs  mod.rs
crates/zr_binary/src/: binary.rs  error.rs  lib.rs  varint.rs
crates/zr_binary/src/binary/: mod.rs  varint.rs
crates/zr_core/: Cargo.toml
crates/zr_core/src/: cancellable.rs  handler.rs  lib.rs  metadata.rs  name.rs  nameable.rs  particle.rs  worker.rs
crates/zr_data_type/: Cargo.toml
crates/zr_data_type/src/: error.rs  lib.rs
crates/zr_nbt/: Cargo.toml
crates/zr_nbt/src/: either.rs  lib.rs
crates/zr_network/: Cargo.toml
crates/zr_network/macros/: Cargo.toml
crates/zr_network/macros/src/: lib.rs
crates/zr_network/src/: error.rs  lib.rs  packet.rs
crates/zr_network/src/client/: client.rs  manager.rs  mod.rs
crates/zr_network/src/error/: handler.rs  mod.rs  network.rs  packet.rs  worker.rs
crates/zr_network/src/event/: event.rs  listener.rs  manager.rs  mod.rs
crates/zr_network/src/handler/: error.rs  mod.rs  options.rs  read_varint.rs
crates/zr_network/src/handler/client/: mod.rs  receiver.rs  sender.rs
crates/zr_network/src/modules/: mod.rs
crates/zr_network/src/modules/manager/: mod.rs
crates/zr_network/src/packet/: compressed.rs  mod.rs  packet.rs
crates/zr_protocol/: Cargo.toml
crates/zr_protocol/src/: lib.rs
crates/zr_protocol/src/handler/: client_handler.rs  config.rs  handler.rs  handshake.rs  login.rs  mod.rs  protocol_handler.rs  status.rs  user.rs
crates/zr_protocol/src/packet/: mod.rs
crates/zr_protocol/src/packet/config/: client.rs  mod.rs  server.rs
crates/zr_protocol/src/packet/config/registry/: banner_pattern.rs  damage_type.rs  dimension_type.rs  mod.rs  painting_variant.rs  wolf_variant.rs
crates/zr_protocol/src/packet/config/registry/armor_trim/: material.rs  mod.rs  pattern.rs
crates/zr_protocol/src/packet/config/registry/biome/: effects.rs  mod.rs
crates/zr_protocol/src/packet/config/registry/biome/particle/: mod.rs  option.rs
crates/zr_protocol/src/packet/config/registry/biome/sound/: additions.rs  ambient.rs  mod.rs  mood.rs  music.rs
crates/zr_protocol/src/packet/config/registry/chat_type/: decoration.rs  mod.rs
crates/zr_protocol/src/packet/handshake/: mod.rs
crates/zr_protocol/src/packet/login/: client.rs  server.rs
crates/zr_protocol/src/packet/play/: mod.rs  server.rs
crates/zr_protocol/src/packet/status/: client.rs  server.rs
crates/zr_protocol/src/protocol/config/: client.rs  mod.rs  server.rs
crates/zr_protocol/src/protocol/config/registry/: mod.rs
crates/zr_protocol/src/protocol/config/registry/registry/: biome.rs  mod.rs
crates/zr_protocol/src/protocol/config/registry/registry/armor_trim/: material.rs  mod.rs  pattern.rs
crates/zr_protocol/src/protocol/config/registry/registry/chat/: mod.rs
crates/zr_protocol/src/protocol/config/registry/registry/damage/: mod.rs
crates/zr_protocol/src/protocol/config/registry/registry/dimension/: mod.rs
crates/zr_protocol/src/protocol/config/registry/registry/particle/: mod.rs
crates/zr_protocol/src/protocol/config/registry/registry/sound/: addition.rs  ambient.rs  mod.rs  mood.rs  music.rs
crates/zr_protocol/src/protocol/handshake/: mod.rs
crates/zr_protocol/src/protocol/login/: client.rs  server.rs
src/: main.rs
src/err/: mod.rs
src/format/: err.rs  mod.rs
src/format/nbt/: mod.rs
src/format/text/: chat.rs  identifier.rs  mod.rs
src/format/uuid/: mod.rs
src/minecraft/: mod.rs
src/minecraft/blocks/: mod.rs
src/minecraft/command/: mod.rs
src/minecraft/entity/: mod.rs
src/minecraft/inventory/: item.rs  mod.rs  slot.rs
src/minecraft/player/: mod.rs
src/net/: mod.rs
src/server/: mod.rs
src/tools/: mod.rs
(+30 files in other folders)
