[package]
name = "zirconium_mc"
version = "0.1.0"
edition = "2021"
authors = ["zirkonya"]
license = "GPL-3.0-only" 
repository = "https://github.com/zirkonya/zirconium-mc"

[dependencies]
zr_binary = { version = "0.1.0", path = "crates/zr_binary" }
zr_protocol = { version = "0.1.0", path = "crates/zr_protocol" }
zr_network = { version = "0.1.0", path = "crates/zr_network" }
zr_core = { path = "crates/zr_core" }
uuid = { version = "1.10.0", features = ["serde"] }

[workspace]
members = [
    "crates/*"
]
