[package]
name = "zr_binary"
version = "0.1.0"
edition = "2021"
authors = ["zirkonya"]
license = "GPL-3.0-only" 
repository = "https://github.com/zirkonya/zirconium-mc"

[dependencies]
zr_binary_macros = { path = "./macros", version = "0.1.0", optional = true }

[features]
default = []
zr_binary_macros = ["dep:zr_binary_macros"]