[package]
name = "zr_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
zr_binary = { version = "0.1.0", path = "../zr_binary" }
zr_binary_macros = { version = "0.1.0", path = "../zr_binary/macros" }
zr_data_type = { version = "0.1.0", path = "../zr_data_type" }
zr_nbt = { version = "0.1.0", path = "../zr_nbt" }
zr_network = { version = "0.1.0", path = "../zr_network" }
zr_network_macros = { version = "0.1.0", path = "../zr_network/macros" }
